# SecondYearProjects

./: README.md
C++ pool/day02a/: double_list.h  linked_list.c  linked_list1.c  linked_list2.c  main.c
C++ pool/day03/: Makefile  string.c  string.h  string1.c  string2.c  string3.c
C++ pool/day07m/: Borg.cpp  Borg.hpp  Federation.cpp  Federation.hpp  WarpSystem.cpp  WarpSystem.hpp  a.out
C++ pool/day09/: Character.cpp  Character.hpp  Hunter.cpp  Hunter.hpp  Mage.cpp  Mage.hpp  Paladin.cpp  Paladin.hpp  Priest.cpp  Priest.hpp  Warrior.cpp  Warrior.hpp  a.out  ex00.c  ex00.h  main.cpp
C++ pool/day16/: a.out  main.cpp
C++ pool/day17/: a.out  main.cpp
C++ pool/rush1/: a.out  char.c  float.c  int.c  new.c  point.c  vertex.c
C++ pool/rush2/: Makefile  a.out
C++ pool/rush3/: HelloWorld  Makefile  main.cpp  main.hpp  test.cpp
CNA/: Makefile  README.MD  test.sh
CNA/src/: groundhog  main.py  test.py
DOP/: docker-compose.yml
DOP/result/: Dockerfile
FUN/Wolfram/: package.yaml  stack.yaml  wolfram.cabal
OOP/Arcade/: CMakeLists.txt  Makefile  README.MD  arcade  main.cpp  scores.txt
OOP/Arcade/lib/: ALibs.hpp  ILibs.hpp  Makefile
OOP/Arcade/lib/NCURSES/: ncurses.cpp  ncurses.hpp
OOP/Arcade/lib/SFML/: SFML.cpp  SFML.hpp
OOP/Arcade/lib/SLD2/: SDL2.cpp  SDL2.hpp
OOP/Arcade/lib/games/: AGames.hpp  IGames.hpp  Makefile
OOP/Arcade/lib/games/nibbler/: nibbler.cpp  nibbler.hpp
OOP/Arcade/lib/games/pacman/: pacman.cpp  pacman.hpp
OOP/Arcade/src/: dlopen_encapsulated.cpp  dlopen_encapsulated.hpp
OOP/Arcade/src/core/: core.hpp  main_core.cpp
OOP/Arcade/src/exceptions/: error.cpp  error.hpp
OOP/nts/: Makefile  README.MD  a.nts  nanotekspice  test.nts
YEP/: CMakeLists.txt  Makefile  Quotes.md  README.md  save_control.txt
YEP/Include/: controlData.hpp  destructibleWall.hpp  error.hpp  gamebomba.hpp  gamebox.hpp  gamecore.hpp  menu.hpp  player.hpp
YEP/Include/encapsulation/: MyAudioE.cpp  MyAudioE.hpp  MyCoreE.cpp  MyCoreE.hpp  MyKeyE.cpp  MyKeyE.hpp  MyModelsE.cpp  MyModelsE.hpp  MyShapesE.cpp  MyShapesE.hpp  MyTextE.cpp  MyTextE.hpp  MyTextureE.cpp  MyTextureE.hpp
YEP/src/: main.cpp
YEP/src/error/: error.cpp
YEP/src/game/: bombaInterraction.cpp  borderWall.cpp  destructibleWall.cpp  gamebomba.cpp  gamebox.cpp  gamecore.cpp  player.cpp
YEP/src/map/: a.out  proceduralMap.cpp
YEP/src/map/parts/botLeft/: p1.txt  p2.txt  p3.txt  p4.txt
YEP/src/map/parts/botRight/: p1.txt  p2.txt  p3.txt  p4.txt
YEP/src/map/parts/topLeft/: p1.txt  p2.txt  p3.txt  p4.txt
YEP/src/map/parts/topRight/: p1.txt  p2.txt  p3.txt  p4.txt
YEP/src/menu/: menu.cpp
plazzza/: Makefile  README.MD
plazzza/include/: error.hpp
plazzza/src/: Logger.cpp  baking.cpp  cond_var.cpp  (+11 more)
(+243 files in other folders)
